# scoped-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  architecture-overview.mmd  index.md  manifest-schema.md  middleware.md  module-authoring.md  module-lifecycle.mmd  scoping-enforcement.mmd  scoping-strategies.md  security-audit.md  threat-model.md  troubleshooting.md
examples/audit-log/: README.md
examples/claude-code/: multi-agent-setup.md  settings.json
examples/custom-module/: README.md  redis_tools.py
examples/manifests/: build-agent.yml  monitor-agent.yml  notifier-agent.yml  ops-agent.yml  research-agent.yml
examples/vault/: manifest-vault.yml  setup.sh  vault-policy.hcl
examples/vaultwarden/: README.md
src/scoped_mcp/: __init__.py  audit.py  credentials.py  credentials_vault.py  exceptions.py  hitl.py  hitl_cli.py  hitl_notify.py  identity.py  manifest.py  middleware.py  registry.py  scoping.py  server.py  state.py  state_dragonfly.py
src/scoped_mcp/contrib/: arg_filter.py  otel.py  rate_limit.py
src/scoped_mcp/modules/: __init__.py  _base.py  _influxdb_validators.py  discord_webhook.py  filesystem.py  grafana.py  http_proxy.py  influxdb.py  matrix.py  mcp_proxy.py  ntfy.py  slack_webhook.py  smtp.py  sqlite.py
tests/: conftest.py  test_audit.py  test_credentials.py  test_credentials_vault.py  test_hitl.py  test_identity.py  test_manifest.py  test_middleware.py  test_registry.py  test_scoping.py  test_state.py
tests/test_contrib/: test_arg_filter.py  test_otel.py  test_rate_limit.py
tests/test_modules/: test_base.py  test_filesystem.py  test_grafana.py  test_http_proxy.py  test_influxdb.py  test_matrix.py  test_mcp_proxy.py  test_mcp_proxy_schema_validation.py  test_notifications.py  test_sqlite.py
