[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoped-mcp"
version = "0.1.0"
description = "Per-agent scoped MCP tool proxy with credential isolation and audit logging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "pydantic>=2.0,<3.0",
    "structlog",
    "pyyaml",
    "sqlglot>=30.0",
]

[project.optional-dependencies]
http = ["httpx"]
smtp = ["aiosmtplib"]
matrix = ["httpx"]
sqlite = ["aiosqlite"]
grafana = ["httpx"]
influxdb = ["httpx"]
ntfy = ["httpx"]
slack = ["httpx"]
discord = ["httpx"]
all = ["httpx", "aiosmtplib", "aiosqlite"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff"]

[project.scripts]
scoped-mcp = "scoped_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scoped_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
