[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoped-mcp"
version = "0.8.0"
description = "Per-agent scoped MCP tool proxy with credential isolation and audit logging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "ai-agents", "claude-code", "fastmcp", "multi-agent", "tool-proxy", "credential-isolation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "pydantic>=2.0,<3.0",
    "structlog",
    "pyyaml",
    "sqlglot>=30.0",
]

[project.urls]
Homepage = "https://github.com/TadMSTR/scoped-mcp"
Documentation = "https://tadmstr.github.io/scoped-mcp/"
Repository = "https://github.com/TadMSTR/scoped-mcp"
Issues = "https://github.com/TadMSTR/scoped-mcp/issues"

[project.optional-dependencies]
http = ["httpx"]       # enables grafana, influxdb, ntfy, slack, discord, matrix, http_proxy
smtp = ["aiosmtplib"]  # enables smtp module
sqlite = ["aiosqlite"] # enables sqlite module
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dragonfly = ["redis>=5.0,<6"]  # enables DragonflyBackend (rate limiting + HITL shared state)
vault = ["hvac>=2.0,<3"]       # enables Vault credential source (v0.8)
all = ["httpx", "aiosmtplib", "aiosqlite"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "redis>=5.0,<6", "hvac>=2.0,<3"]

[project.scripts]
scoped-mcp = "scoped_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scoped_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".github", "docs", "examples"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
show_missing = true
